Add parameters / return types required for validations